syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Clud.Grpc";

service Deployments {
  rpc CreateDeployment (CreateDeploymentRequest) returns (CreateDeploymentResponse);
}

message CreateDeploymentRequest {
  string name = 1;
  string owner = 2;
  string description = 3;
  string repository = 4;
  string entryPoint = 5;

  message ServiceDeploymentDetails {
    string serviceName = 1;
    string dockerImage = 2;
    bool isPublicDockerImage = 3;
    int32 port = 4;
  }

  repeated ServiceDeploymentDetails services = 6;
}

message CreateDeploymentResponse {
}

service Applications {
  rpc ListApplications (ListApplicationsRequest) returns (ListApplicationsResponse);
  rpc GetApplication (GetApplicationRequest) returns (ApplicationResponse);
}

message ListApplicationsRequest {
}

message ListApplicationsResponse {
  message Application {
    string name = 1;
    string description = 2;
    string owner = 3;
    google.protobuf.Timestamp lastUpdatedTime = 4;
  }

  repeated Application applications = 1;
}

message GetApplicationRequest {
  string name = 1;
}

message ApplicationResponse {
  string name = 1;
  string url = 2;
  string description = 3;
  string owner = 4;
  string repository = 5;
  google.protobuf.Timestamp lastUpdatedTime = 6;
  repeated ServiceResponse services = 7;
  repeated ApplicationHistoryResponse history = 8;

  message ServiceResponse {
    string name = 1;
    bool externallyAccessible = 2;
    string externalHostname = 3;
    string internalHostname = 4;
    int32 totalPods = 5;
    int32 readyPods = 6;
    int32 upToDatePods = 7;
    int32 desiredPods = 8;
    string imageName = 9;
    repeated PodResponse pods = 10;
  }

  message PodResponse {
    string name = 1;
    string status = 2;
    string statusMessage = 3;
    google.protobuf.Timestamp creationDate = 4;
    string image = 5;
  }

  message ApplicationHistoryResponse {
    string message = 1;
    google.protobuf.Timestamp updateDate = 2;
  }
}
